# FastPet

./: .env.sample  .pre-commit-config.yaml  Dockerfile  LICENSE  README.Docker.md  README.md  alembic.ini  compose.yaml  main.py  pyproject.toml  setup.cfg
alembic/: env.py
app/models/: __init__.py  base_model.py  user_model.py
db_settings/: db_settings.py  session_maker.py
